# airflute

./: .gitignore  CompteRendu.md  Conventions Code.md  LICENSE.md  README.md  SUIVI.md  TODO.md  futurREADME.md
A trier/documents/: Protocole_Midi.md  threads.md
MIDI/: mapKeysToNote  mapKeysToNote.c
TestLogiciel/button-pressed/: README.md  prj.conf
TestLogiciel/hello_world/: README.md
airflute_v1/: CMakeLists.txt  prj.conf
airflute_v1/src/: main.c
airflute_v2/: prj.conf
airflute_v2/src/: blinkLed.c  blinkLed.h  blowSensor.c  blowSensor.h  bluetoothThread.c  bluetoothThread.h  buttonStatus.c  buttonStatus.h  combinationToMidi.c  combinationToMidi.h  dataType.h  main.c  mainCycle.c  mainCycle.h  playSingleNote.c  playSingleNote.h
documents/: Protocole_Midi.md  threads.md
hardware/: horn.stl
hardware/3d_models/: body.stl  mouthpiece.stl
hardware/pcb/: Gerber for cny70.rar
imgs/: images.md
software/: CMakeLists.txt  prj.conf
software/src/: blinkLed.h  blowSensor.c  blowSensor.h  bluetoothThread.c  bluetoothThread.h  buttonStatus.c  buttonStatus.h  combinationToMidi.c  combinationToMidi.h  mainCycle.h  playSingleNote.c  playSingleNote.h
tests_Justine/archi_simple_fonctionnelle/: CMakeLists.txt
tests_Justine/test_archi/: prj.conf
tests_Justine/test_archi_onoff/: CMakeLists.txt  prj.conf
tests_Justine/test_controller_change/: CMakeLists.txt  prj.conf
tests_Justine/test_threads/: prj.conf
tests_Justine/zephyr_ble_midi/: prj.conf
tests_Lucas/I2CScanner/: I2CScanner.ino
tests_Lucas/ReadValue/: ReadValue.ino
(+139 files in other folders)
